# agents-intensive-capstone-2025

./: .env.example  .gitignore  README.md  pyproject.toml
adk_app/SixHatsSolver/: agent.py
notebooks/: 00_research_pipeline_agent.ipynb  01_six_hats_demo_ui.ipynb.ipynb  01_six_thinking_agents.ipynb  02_aia_agents.ipynb  six_hats_agentic_demo_ui.ipynb
src/agents_intensive_capstone/agents/: black_hat_factory.py  blue_hat_agent.py  blue_hat_factory.py  factory.py  green_hat_agent.py  green_hat_factory.py  red_hat_factory.py  summarizer_agent.py  white_hat_factory.py  yellow_hat_agent.py  yellow_hat_factory.py
src/agents_intensive_capstone/prompts/: __init__.py  black_hat_prompt.txt  blue_hat_prompt.txt  green_hat_prompt.txt  loader.py  red_hat_prompt.txt  red_hat_search_prompt.txt  white_hat_prompt.txt  yellow_hat_prompt.txt  yellow_hat_search_prompt.txt
src/agents_intensive_capstone/tools/: tools.py
tests/integration/: test_blue_hat_agent.py  test_green_hat_agent.py  test_yellow_hat_agent.py
tests/integration/agents/: test_black_hat_factory.py  test_blue_hat_factory.py  test_green_hat_factory.py  test_red_hat_factory.py  test_white_hat_factory.py  test_yellow_hat_factory.py
tests/integration/prompts/: test_load_prompt.py
